force-app/main/default/objects/Hito__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facturación</fullName>
            </value>
            <value>
                <fullName>Cumplimiento</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>