force-app/main/default/objects/Hito__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Hitos</relationshipLabel>
    <relationshipName>Hitos</relationshipName>
    <type>Lookup</type>
</CustomField>