force-app/main/default/objects/Hito__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>