force-app/main/default/objects/Hito__c/fields/Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin__c</fullName>
    <description>Fecha Contractual de Fin</description>
    <label>Fecha Real</label>
    <required>true</required>
    <type>Date</type>
</CustomField>