force-app/main/default/objects/Hito__c/fields/Hito_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Hito_Anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica el hito previo</description>
    <label>Hito Anterior</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Proyecto__c</field>
            <operation>equals</operation>
            <valueField>Hito__c.Proyecto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hito__c</referenceTo>
    <relationshipLabel>Hitos</relationshipLabel>
    <relationshipName>Hitos</relationshipName>
    <type>Lookup</type>
</CustomField>