force-app/main/default/objects/Hito__c/fields/Importe_contractual__c.field-meta.xml
<CustomField>
    <fullName>Importe_contractual__c</fullName>
    <label>Importe contractual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>